# Abstract2D

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
engine/: CMakeLists.txt
engine/components/: Component.h  Transform.h
engine/core/: Logger.cpp  Logger.h  Window.cpp  Window.h
engine/core/config/: Engine.cpp  Engine.h  Logger.h
engine/graphics/: Color.h  Renderer.cpp  Renderer.h
engine/math/: Vector2.h
engine/nodes/: AbstractNode.h  CircleNode.h  Node.cpp  Node.h  VisualNode.h
engine/scenes/: Scene.cpp  Scene.h
game/: CMakeLists.txt
game/src/: Game.cpp  Game.h  Main.cpp
